stacktrace4.txt
xdress --debug -p clang  && python setup.py build                                                                                                                                               ✱ ◼
autoall: discovering API names
autoall: no API names to discover!
autodescribe: registering Rectangle
autodescribe: registering AreaHandlerStruct
dtypes: registering numpy dtypes
stlwrap: registering C++ standard library types
autodescribe: scraping C/C++ APIs from source
autodescribe: describing Rectangle
autodescribe: describing AreaHandlerStruct
cythongen: creating C/C++ API wrappers
extratypes: generating extra type header & source files for xdress
dtypes: generating numpy dtype wrappers
stlwrap: generating C++ standard library wrappers & converters
running build
running build_py
running build_ext
cythoning rect/rectangle.pyx to rect/rectangle.cpp

Error compiling Cython file:
------------------------------------------------------------
...
        int x1
        int y0
        int y1

        # methods
        void do_with_area(void (*{type_name})(int)) except +
                                ^
------------------------------------------------------------

rect/cpp_rectangle.pxd:43:33: Expected ')', found '{'

Error compiling Cython file:
------------------------------------------------------------
...
    
    # methods
    def _rectangle_do_with_area_0(self, op):
        """do_with_area(self, op)
        no docstring for do_with_area, please file a bug report!"""
        (<cpp_rectangle.Rectangle *> self._inst).do_with_area(cdef void op_proxy(int _0):
                                                             ^
------------------------------------------------------------

rect/rectangle.pyx:353:62: Expected an identifier or literal
building 'rect.rectangle' extension
gcc -pthread -fno-strict-aliasing -march=x86-64 -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4 -DNDEBUG -march=x86-64 -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4 -fPIC 
-I/home/james/Src/xdress-rect -I/usr/lib/python2.7/site-packages/numpy/core/include -I/usr/include/python2.7 -c src/rectangle.cpp -o build/temp.linux-x86_64-2.7/src/rectangle.o
src/rectangle.cpp: In member function ‘void shapes::Rectangle::do_with_area(void (*)(int))’:
src/rectangle.cpp:63:11: error: void value not ignored as it ought to be
     *op(10);
           ^
error: command 'gcc' failed with exit status 1

